# SawitCore

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_NETWORK.md  verify_net.py
.cargo/: config.toml
docs/: NETWORK_TESTING.md  TAP_NETWORK_SETUP.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs
src/drivers/: block.rs  mod.rs  net.rs  serial.rs  vga_buffer.rs  virtio_hal.rs  virtio_transport.rs
src/sawitdb/: btree.rs  mod.rs  pager.rs  types.rs
src/task/: keyboard.rs  mod.rs  net.rs  shell.rs
tools/: run.ps1  run_tap.ps1  run_tap_admin.ps1  test_network.ps1
