[package]
name = "sawitcore-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
rlibc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
